# uczciwi_politycy

./: CMakeLists.txt  README.md  a.out  main.c  main.cpp  main.cpp~
